[package]
name = "display"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
conntrack = { path = "../conntrack" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tabled = "0.17.0"
thiserror = { workspace = true }
tokio = { workspace = true }
