[package]
name = "rconntrack"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
clap = { version = "4.5.23", features = ["derive"] }
build-info = "0.0.39"
conntrack = { path = "../conntrack" }
display = { path = "../display" }
futures = { workspace = true }
ipnet = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
build-info-build = "0.0.39"
